--- a/package.json
+++ b/package.json
@@ -106,20 +106,42 @@
     "build": "vite build && node ./scripts/build.js",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
-    "watch": "vite build -w"
+    "watch": "vite build -w",
+    "format:check": "biome format",
+    "format:fix": "biome format --write",
+    "lint:check": "eslint . && biome lint",
+    "lint:fix": "eslint . --fix && biome lint --fix",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@octokit/rest": "^22.0.1",
     "@kubernetes/client-node": "^1.4.0",
+    "@octokit/rest": "^22.0.1",
     "@podman-desktop/api": "1.24.2",
+    "@types/node": "^25.0.8",
     "mustache": "^4.2.0",
     "yaml": "^2.8.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
+    "@eslint/compat": "^2.0.1",
     "adm-zip": "^0.5.16",
+    "eslint": "^9.39.2",
+    "eslint-import-resolver-custom-alias": "^1.3.2",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-etc": "^2.0.3",
+    "eslint-plugin-file-progress": "^3.0.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-redundant-undefined": "^1.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "eslint-plugin-unicorn": "^62.0.0",
+    "globals": "^17.0.0",
     "mkdirp": "^3.0.1",
     "tmp-promise": "^3.0.3",
     "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.0",
     "vite": "^7.3.1",
     "vitest": "^4.0.10"
   }
