--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "@octokit/core": "^7.0.6",
     "@octokit/types": "^16.0.0",
     "@types/node": "^25.0.10",
+    "@vitest/coverage-v8": "4.0.17",
     "adm-zip": "^0.5.16",
     "eslint": "^9.39.2",
     "eslint-import-resolver-custom-alias": "^1.3.2",
