--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
     "@eslint/compat": "^2.0.1",
+    "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.2",
     "@octokit/core": "^7.0.6",
     "@octokit/types": "^16.0.0",
