chore: update release workflow
Signed-off-by: Sonia_Sandler <ssandler@redhat.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,15 +23,18 @@ permissions:
   pull-requests: write
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to release'
-        required: true
-      branch:
-        description: 'Branch to use for the release'
-        required: true
-        default: main
+  # workflow_dispatch:
+  #   inputs:
+  #     version:
+  #       description: 'Version to release'
+  #       required: true
+  #     branch:
+  #       description: 'Branch to use for the release'
+  #       required: true
+  #       default: main
+  pull_request:
+    types: [labeled]
+
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
@@ -50,7 +53,7 @@ jobs:
       - name: Generate tag utilities
         id: TAG_UTIL
         run: |
-            TAG_PATTERN=${{ github.event.inputs.version }}
+            TAG_PATTERN=0.1.0
             echo "githubTag=v$TAG_PATTERN" >> ${GITHUB_OUTPUT}
             echo "extensionVersion=$TAG_PATTERN" >> ${GITHUB_OUTPUT}
 
@@ -81,7 +84,7 @@ jobs:
           prerelease: true
 
       - name: Create the PR to bump the version in the main branch (only if we're tagging from main branch)
-        if: ${{ github.event.inputs.branch == 'main' }}
+        if: ${{ github.event.inputs.branch == 'add-release-test' }}
         run: |
           git config --local user.name ${{ github.actor }}
           git config --local user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
@@ -96,7 +99,7 @@ jobs:
           git commit -s --amend -m "chore: bump version to ${bumpedVersion}"
           git push origin "${bumpedBranchName}"
           echo -e "📢 Bump version to ${bumpedVersion}\n\n${{ steps.TAG_UTIL.outputs.extensionVersion }} has been released.\n\n Time to switch to the new ${bumpedVersion} version 🥳" > /tmp/pr-title
-          pullRequestUrl=$(gh pr create --title "chore: 📢 Bump version to ${bumpedVersion}" --body-file /tmp/pr-title --head "${bumpedBranchName}" --base "main")
+          pullRequestUrl=$(gh pr create --title "chore: 📢 Bump version to ${bumpedVersion}" --body-file /tmp/pr-title --head "${bumpedBranchName}" --base "add-release-test")
           echo "📢 Pull request created: ${pullRequestUrl}"
           echo "➡️ Flag the PR as being ready for review"
           gh pr ready "${pullRequestUrl}"
@@ -146,7 +149,7 @@ jobs:
         with:
           image: ${{ steps.builder-image.outputs.image }}
           tags: ${{ steps.builder-image.outputs.tags }}
-          registry: ghcr.io/${{ github.repository_owner }}
+          registry: ghcr.io/soniasandler
 
   extension-image:
     name: Build and publish extension OCI image
@@ -188,4 +191,4 @@ jobs:
         with:
           image: ${{ steps.extension-image.outputs.image }}
           tags: ${{ steps.extension-image.outputs.tags }}
-          registry: ghcr.io/${{ github.repository_owner }}
+          registry: ghcr.io/soniasandler
