--- a/.github/workflows/build-next.yaml
+++ b/.github/workflows/build-next.yaml
@@ -103,7 +103,7 @@ jobs:
         id: extension-image
         uses: redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056 # v2.13
         with:
-          image: podman-desktop-kind-ext
+          image: podman-desktop-kind-ext-${{ matrix.airgap == 'true' && '(airgap)' || ''  }}
           tags: next ${{ github.sha }}
           archs: amd64, arm64
           containerfiles: |
